# garbage_classification

./: .gitignore  README.md  app.py  dataset.yaml  hyp.yaml  pyproject.toml  requirements.txt  trash_cnn_demo.py
YOLO-Waste-Detection-1/: data.yaml
YOLO-Waste-Detection-1/train/: labels.cache
YOLO-Waste-Detection-1/valid/: labels.cache
YOLO-Waste-Detection-2/: data.yaml
YOLO-Waste-Detection-2/train/: labels.cache
YOLO-Waste-Detection-2/valid/: labels.cache
datasets/: data.yaml
datasets/coco8/labels/: train.cache  val.cache
datasets/train/: labels.cache
datasets/valid/: labels.cache
garbage-classification/: pyproject.toml
garbage_classification/: app.py  demo_live.py  download_data.py  trash_cnn_demo.py  waste_classification_webcam.py
garbage_classification/training/: download_data_roboflow.py  train_yolov8.py  train_yolov8_allen.py  train_yolov8_matt.py
runs/detect/train/: args.yaml
runs/detect/train10/: args.yaml  results.csv
runs/detect/train11/: args.yaml  results.csv
runs/detect/train12/: args.yaml  results.csv
runs/detect/train2/: args.yaml
runs/detect/train21/: args.yaml
runs/detect/train22/: args.yaml
runs/detect/train23/: args.yaml
runs/detect/train24/: args.yaml  results.csv
runs/detect/train3/: args.yaml  events.out.tfevents.1738796122.Matthews-MacBook-Pro-3.local.67558.0  results.csv
runs/detect/train4/: args.yaml  events.out.tfevents.1738825396.LAPTOP-HSBKMN1Q.17496.0  results.csv
runs/detect/train5/: args.yaml
runs/detect/train6/: args.yaml
runs/detect/train7/: args.yaml
styles/: waste_classifier.css
(+7 files in other folders)
