[project]
name = "garbage-classification"
version = "0.1.0"
description = ""
authors = [
    { name = "Matthew Ray Lee", email = "matthewraylee@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "torch>=1.9.0,<2.0.0",
    "torchvision>=0.10.0,<0.11.0",
    "streamlit>=0.84.0,<0.85.0"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"